# Advanced_Robotics

./: README.md
icp/: Document.md
icp/course_agv_icp/: CMakeLists.txt
icp/course_agv_icp/launch/: course_agv.rviz  icp.launch
icp/course_agv_icp/src/: icp.cpp
robot_arm/: Document.html  Document.md.md
robot_arm/images/: README.md
robot_arm/probot_gazebo/: CMakeLists.txt  package.xml
robot_arm/probot_gazebo/launch/probot_anno_position_control/: probot_anno_gazebo_world_pos.launch
robot_arm/probot_gazebo/src/: IK.cpp  control_example.cpp  trajectory_planning.cpp
robot_arm/实验1：正逆运动学/: DK.cpp  DK.m  IK.m
robot_arm/实验2：速度传递实验/: control_robot_vel.cpp
robot_arm/实验4：敲铃实验（仿真）/: trajwithobstacle.cpp
robot_arm/实验4：敲铃实验（实际）/: trajwithobstacle_real.cpp
stupid_yellow_car/: Document.md
stupid_yellow_car/course_agv_nav/launch/: nav.launch  nav.rviz  replan.launch
stupid_yellow_car/course_agv_nav/scripts/: dwa.py  global_planner.py  local_planner.py  rrt.py  stupid_tracking.py
